--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@
   --font-cameo: "nitti-typewriter-cameo", "sans-serif";
 
   --drop-shadow-divider: 0 25px 35px rgba(0 0 0 / 0.75);
+  --drop-shadow-cookies: 0 2px 8px rgba(0 0 0 /0.25);
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
@@ -76,7 +77,7 @@
     h4,
     h5,
     h6 {
-      @apply lg:px-[2vw]
+      @apply lg:px-[2vw];
     }
 
     blockquote {
@@ -259,6 +260,27 @@
   }
 
   /* Buttons */
+  .cookies-buttons {
+    @apply first:mr-2
+      inline-flex
+      font-semibold
+      py-2
+      px-4
+      rounded-lg
+      outline-2
+      -outline-offset-1
+      outline-firstlight
+      dark:outline-firstdark
+      bg-firstlight
+      text-white
+      dark:bg-firstdark    
+      dark:text-secondark
+      hover:bg-white
+      hover:text-firstlight
+      dark:hover:bg-secondark    
+      dark:hover:text-firstdark;
+  }
+
   .custom-btn {
     @apply mt-5
     lg:mt-10
